<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="50dp"
    tools:context=".presentation.CreateMealPage">

    <EditText
        android:id="@+id/meal_name_input"
        style="@style/input_fields_styling"
        android:hint="@string/meal_name_input_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/meal_price_input"
        style="@style/input_fields_styling"
        android:hint="@string/meal_price_input_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_name_input" />

    <EditText
        android:id="@+id/meal_date_input"
        style="@style/input_fields_styling"
        android:hint="@string/meal_date_input_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_price_input" />

    <EditText
        android:id="@+id/meal_description_input"
        style="@style/input_fields_styling"
        android:hint="@string/meal_description_input_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_date_input" />

    <EditText
        android:id="@+id/meal_image_url_input"
        style="@style/input_fields_styling"
        android:hint="@string/meal_image_ul_input_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_description_input" />

    <CheckBox
        android:id="@+id/vega_checkbox_input"
        style="@style/checkbox_styling"
        android:text="@string/vega_text"
        app:layout_constraintBottom_toTopOf="@+id/createMealButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_image_url_input" />

    <CheckBox
        android:id="@+id/vegan_checkbox_input"
        style="@style/checkbox_styling"
        android:text="@string/vegan_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vega_checkbox_input" />

    <CheckBox
        android:id="@+id/take_home_checkbox_input"
        style="@style/checkbox_styling"
        android:text="@string/take_home_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegan_checkbox_input" />

    <TextView
        android:id="@+id/max_amount_of_participants_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/participants_text"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/max_amount_of_participants_spinner"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/max_amount_of_participants_spinner"
        style="@style/spinner_styling"
        android:entries="@array/size_values"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_checkbox_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/vegan_checkbox_input" />

    <Button
        android:id="@+id/createMealButton"
        style="@style/button_styling"
        android:width="250dp"
        android:height="55dp"
        android:onClick="createMeal"
        android:text="@string/create_meal_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>