<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter"
        android:icon="@drawable/icon_filter"
        android:title="Filter"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/filter_vega"
                android:title="@string/vega_text"
                app:showAsAction="always" />

            <item
                android:id="@+id/filter_vegan"
                android:title="@string/vegan_text"
                app:showAsAction="always" />

            <item
                android:id="@+id/filter_take_home"
                android:title="@string/take_home_text"
                app:showAsAction="always" />
            <item
                android:id="@+id/filter_remove"
                android:title="Remove filter"
                app:showAsAction="always" />
        </menu>

    </item>

</menu>